syntax = "proto3";

option csharp_namespace = "GrpcServiceDemo";
import "google/protobuf/wrappers.proto";
package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string values = 1; 
}




message Person {
  string name = 1;
  google.protobuf.Int32Value age = 2;
}

message PeopleList {
  repeated Person people = 1;
}

service People {
  rpc GetPeople (Empty) returns (PeopleList);
  rpc AddPeople (PeopleList) returns (Empty); 
}

message Empty {}